--- a/style.css
+++ b/style.css
@@ -10,3 +10,26 @@ body{
     position: relative;
     font-family: roboto,sans-serif;
 }
+
+.navbar{
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0 4%;
+    background: #0b111b;
+    z-index: 9;
+    display: flex;
+    align-items: center;
+}
+
+.brand-logo{
+    height: 70px;
+}
+
+.nav-links{
+    margin-top: 10px;
+    display: flex;
+    list-style: none;
+}
